# src/models/karyawan.rs
@@ -15,6 +15,9 @@ pub struct Model {
     pub foto_original_name: Option<String>,
     pub foto_size: Option<i64>,
     pub foto_mime_type: Option<String>,
+    pub user_id: Option<i32>,
+    pub created_by: Option<i32>,
+    pub updated_by: Option<i32>,
     pub created_at: DateTimeWithTimeZone,
     pub updated_at: DateTimeWithTimeZone,
 }
@@ -27,6 +30,24 @@ pub enum Relation {
         to = "super::kantor::Column::Id"
     )]
     Kantor,
+    #[sea_orm(
+        belongs_to = "super::user::Entity",
+        from = "Column::UserId",
+        to = "super::user::Column::Id"
+    )]
+    User,
+    #[sea_orm(
+        belongs_to = "super::user::Entity",
+        from = "Column::CreatedBy",
+        to = "super::user::Column::Id"
+    )]
+    CreatedByUser,
+    #[sea_orm(
+        belongs_to = "super::user::Entity",
+        from = "Column::UpdatedBy",
+        to = "super::user::Column::Id"
+    )]
+    UpdatedByUser,
 }
 
 impl ActiveModelBehavior for ActiveModel {}
@@ -53,6 +74,8 @@ pub struct CreateKaryawanRequest {
 
     #[validate(custom(function = "crate::validators::karyawan::validate_kantor_id"))]
     pub kantor_id: String,
+
+    pub user_id: Option<String>,
 }
 
 #[derive(Serialize, Deserialize, Debug, Validate)]
@@ -68,4 +91,6 @@ pub struct UpdateKaryawanRequest {
 
     #[validate(custom(function = "crate::validators::karyawan::validate_kantor_id"))]
     pub kantor_id: String,
+
+    pub user_id: Option<String>,
 }
